apps/media/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.x.pmcd.io`)
      kind: Rule
      services:
        - name: prowlarr
          port: 80
  tls:
    certResolver: pmcdio
